--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "uuid": "^8.3.2",
     "vee-validate": "^3.4.5",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-fullscreen": "^2.2.0",
     "vue-native-websocket": "^2.0.14",
     "vue-virtual-scroller": "^1.0.10",
     "vuedraggable": "^2.24.3",
